fix(lightbox): mobile browser vertical overflow

--- a/packages/lightbox/src/Lightbox.module.css
+++ b/packages/lightbox/src/Lightbox.module.css
@@ -2,8 +2,8 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  width: 100vw;
+  height: 100dvh;
+  width: 100dvw;
   color: var(--lightbox-color);
 }
 
